experimenting with code generation